# mintVCS

./: .mintvcsignore  CMakeLists.txt  CompileCommands.cpp  Readme.md  check.txt  mad.txt  test.txt
.mintvcs/: index
.mintvcs/refs/heads/: feature  main
src/: files.cpp  main.cpp
src/commands/add/: add.cpp  add.h
src/commands/branch/: branch.cpp  branch.h
src/commands/checkout/: checkout.cpp  checkout.h
src/commands/commit/: commit.cpp  commit.h
src/commands/hash_object/: hash_object.cpp  hash_object.h
src/commands/init/: init.cpp  init.h
src/commands/log/: log.cpp  log.h
src/commands/merge/: merge.cpp  merge.h
src/commands/status/: status.cpp  status.h
